# tothefuture.me

./: .gitignore  Cargo copy.toml  Cargo.toml  README.md  docker-compose.yml  justfile  package-lock.json
backend/: Cargo.toml  Dockerfile
backend/migration/: Cargo.toml  justfile
backend/migration/src/: lib.rs  m20230610_075132_initial_migration.rs  m20230610_131856_sessions.rs  m20230616_183201_emails.rs
backend/migrations/: 20230605105908_initial.down.sql
backend/src/: lib.rs  main.rs  resend.rs
backend/src/api/: authentication.rs  emails.rs  mod.rs
backend/src/database/: mod.rs  user.rs
backend/src/database/entities/: emails.rs  mod.rs  prelude.rs  sessions.rs  users.rs
backend/src/database/queries/: mod.rs  sessions.rs  users.rs
backend/src/database_sea/: mod.rs
backend/src/database_sea/entities/: users.rs
backend/src/database_sea/queries/: users.rs
backend/src/entities/: emails.rs  mod.rs  prelude.rs  sea_orm_active_enums.rs  sessions.rs  users.rs
backend/src/queries/: emails.rs  mod.rs  sessions.rs  users.rs
frontend/: Dockerfile  package-lock.json  package.json  vite.config.ts
frontend/src/: svg.d.ts
frontend/src/lib/components/: HtmlEditor.svelte  beforeUnload.svelte
frontend/src/lib/components/TextEditor/: EditorButton.svelte  TextEditor.svelte  styles.scss
frontend/src/lib/stores/: editor.ts  loginState.ts  login_state.ts
frontend/src/lib/types/: inputFields.ts
frontend/src/routes/: +layout.svelte  +page.svelte
frontend/src/routes/create_email/: +page.svelte
frontend/src/routes/editor/: +page.svelte
frontend/src/routes/email/: +page.svelte  PrisimJS.svelte  idk.js
frontend/src/routes/email_editor/: +page.svelte
frontend/src/routes/email_import/: +page.svelte
frontend/src/routes/email_selector/: +page.svelte
frontend/src/routes/emails/: +page.svelte
frontend/src/routes/login/: +page.svelte
frontend/src/routes/sign_in/: +page.svelte
frontend/src/routes/sign_up/: +page.svelte
frontend/src/routes/success/: +page.svelte
migrations/: 20230605105908_initial.up.sql
my-skeleton-app/: package.json
my-skeleton-app/src/routes/: +layout.svelte  +page.svelte
my-skeleton-app/src/routes/emails/: +page.svelte
my-skeleton-app/src/routes/login/: +page.svelte
my-skeleton-app/src/routes/sign_up/: +page.svelte
src/database/: mod.rs  user.rs
