[package]
name = "timecapsule-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenv = "0.15.0"
tokio = { version = "1", features = ["full"] }
axum = "0.6.4"
axum-macros = "0.3.7"
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
pbkdf2 = { version = "0.12", features = ["simple"] }
rand_core = { version = "0.6", features = ["std"] }
tower-http = { version = "0.4.0", features = ["cors", "trace"] }
tracing-subscriber = "0.3.17"
tracing = "0.1.37"
sea-orm = { sea-orm = "0.11.3", features = [
    "sqlx-postgres",
    "runtime-tokio-rustls",
    "macros",
] }
sqlx = { version = "0.6.3" }
chrono = { version = "0.4.26", features = ["clock"] }
rand_chacha = "0.3.1"
http-body = "0.4.5"
