[package]
name = "timecapsule-rs"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "backend"
path = "src/main.rs"


[dependencies]
dotenv = "0.15.0"
tokio = { version = "1", features = ["full"] }
axum = "0.6.18"
axum-macros = "0.3.7"
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
pbkdf2 = { version = "0.12", features = ["simple"] }
rand_core = { version = "0.6", features = ["std"] }
tower-http = { version = "0.4.0", features = ["cors", "trace"] }
tracing-subscriber = "0.3.17"
tracing = "0.1.37"
sea-orm = { version = "0.11.3", features = [
    "sqlx-postgres",
    "runtime-tokio-rustls",
    "macros",
] }
sqlx = { version = "0.6.3" }
chrono = { version = "0.4.26", features = ["clock"] }
rand_chacha = "0.3.1"
http-body = "0.4.5"
mail-parser = "0.8.2"
reqwest = { version = "0.11", features = ["json"] }
lazy_static = "1.4.0"
redis = { version = "0.23.0", features = [
    "aio",
    "connection-manager",
    "tokio-comp",
] }
itertools = "0.11.0"
tower_governor = "0.0.4"
tower = "0.4.13"
regex = "1.9.1"
